--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
     {% block metadatas %}
       <!-- Primary Meta Tags -->
         <title>Amakuru - Menya byinshi kugihe</title>
-        <meta name="title" content="Amakuru - Menya byinshi kugihe">
+        <meta name="title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
         <meta name="description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
 
         <!-- Open Graph / Facebook -->
