--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
     <script data-ad-client="ca-pub-3242762948116825" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% block metadatas %}
       <!-- Primary Meta Tags -->
-        <title>Amakuru - Menya byinshi kugihe</title>
+        <title>Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino</title>
         <meta name="title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
         <meta name="description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
 
@@ -33,7 +33,7 @@
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://byosehano.com/">
-        <meta property="twitter:title" content="Amakuru - Menya byinshi kugihe">
+        <meta property="twitter:title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
         <meta property="twitter:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
         <meta property="twitter:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
     {% endblock metadatas %}
