--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://byosehano.com/">
         <meta property="twitter:title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
-        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
+        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
         <meta property="twitter:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
     {% endblock metadatas %}
     <!-- CSS -->
