--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,13 +21,13 @@
       <!-- Primary Meta Tags -->
         <title>Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino</title>
         <meta name="title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
-        <meta name="description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
+        <meta name="description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://byosehano.com/">
         <meta property="og:title" content="Amakuru - Menya byinshi kugihe">
-        <meta property="og:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
+        <meta property="og:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
         <meta property="og:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
 
         <!-- Twitter -->
