--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 
 {% block metadatas %}
-<title>{{ post.category.name }} - {{ post.title }}</title>
+<title>{{ menu_title }}</title>
 <meta name="title" content="{{ menu_title }}">
 
 <!-- Open Graph / Facebook -->
