--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -4,18 +4,18 @@
 
 {% block metadatas %}
 <title>{{ menu_title }}</title>
-<meta name="title" content="{{ menu_title }}">
+<meta name="title" content="{{ menu_title|title }}">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://byosehano.com/tags/{{ menu_title }}/">
-<meta property="og:title" content="{{ menu_title }}">
+<meta property="og:title" content="{{ menu_title|title }}">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://byosehano.com/tags/{{ menu_title }}/">
 
-<meta property="twitter:title" content="{{ menu_title }}">
+<meta property="twitter:title" content="{{ menu_title|title }}">
 {% endblock metadatas %}
 
 
