--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://byosehano.com/">
-        <meta property="og:title" content="Amakuru - Menya byinshi kugihe">
+        <meta property="og:title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
         <meta property="og:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
         <meta property="og:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
 
