--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -192,10 +192,10 @@
               </div>
 
               <div class="widget color-default">
-                <h3 class="utf_block_title"><span>Amakuru Akunzwe</span></h3>
+                <h3 class="utf_block_title"><span>Izindi wasoma</span></h3>
                 <div class="utf_list_post_block">
                   <ul class="utf_list_post">
-                    {% for post in popular_news %}
+                    {% for post in similar_posts %}
                       <li class="clearfix">
                         <div class="utf_post_block_style post-float clearfix">
                           <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="{{ post.thumbnail.url }}" alt="{{ post.title }}"> </a></div>
