--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -3,10 +3,6 @@
 {% load humanize %}
 {% load user_agents %}
 
-{% block sharethis %}
-<script async type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=inline-share-buttons&cms=sop' async='async'></script>
-{% endblock sharethis %}
-
 {% block metadatas %}
     <!-- Primary Meta Tags -->
       <title>{{ post.category.name }} - {{ post.title }}</title>
@@ -215,7 +211,10 @@
               <div class="widget widget-tags">
                 <h3 class="utf_block_title"><span>Ibyakunzwe</span></h3>
                 <ul class="unstyled clearfix">
-                  <li><a href="{% url 'web:article_tag' 'imikino' %}">Imikino</a></li>
+                  {% for tag in popular_tags %}
+                    <li><a href="{% url 'web:article_tag' tag.slug %}">{{ tag }}</a></li>
+                  {% endfor %}
+                  
                 </ul>
               </div>
 
