--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -78,7 +78,8 @@
             </nav>
             <div class="utf_nav_search"> <span id="search"><i class="fa fa-search"></i></span> </div>
             <div class="utf_search_block" style="display: none;">
-                <input type="text" class="form-control" placeholder="Shakishikiriza aha...">
+                <script async src="https://cse.google.com/cse.js?cx=partner-pub-3242762948116825:bk80lqgxitc"></script>
+                <div class="gcse-search"></div>
                 <span class="utf_search_close">×</span>
             </div>
         </div>
