--- a/templates/index.html
+++ b/templates/index.html
@@ -90,9 +90,9 @@
             <div class="sidebar utf_sidebar_right">
 
                 <div class="widget color-default">
-                    <h3 class="utf_block_title"><span>Sobanukirwa</span></h3>
+                    <h3 class="utf_block_title"><span>Inkuru Zikunzwe</span></h3>
 
-                    {% for post in sobanukirwas %}
+                    {% for post in popular_news %}
 
                     {% if forloop.first %}
 
