--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 <section class="utf_latest_new_area pb-bottom-20">
     <div class="container">
         <div class="row">
+
             {% for post in amakurumashya|slice:":8" %}
             <div class="col-md-3">
                 <div class="utf_post_block_style clearfix">
@@ -54,6 +55,19 @@
                                 <div class="col-lg-6 col-md-6">
                                     <div class="utf_list_post_block">
                                         <ul class="utf_list_post">
+
+                                            <script async
+                                                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+                                            </script>
+                                            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                                                data-ad-layout-key="-hx-v-z-56+l6"
+                                                data-ad-client="ca-pub-3242762948116825"
+                                                data-ad-slot="7937927161"></ins>
+                                            <script>
+                                                (adsbygoogle = window.adsbygoogle || []).push({});
+                                            </script>
+
+
                                             {% for post in amakurumashya|slice:":6" %}
                                             <li class="clearfix">
                                                 <div class="utf_post_block_style post-float clearfix">
@@ -85,7 +99,7 @@
             </div>
         </div>
 
-        
+
         <div class="col-lg-4 col-md-12">
             <div class="sidebar utf_sidebar_right">
 
@@ -133,6 +147,13 @@
                             {% endif %}
 
                             {% endfor %}
+                            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                                data-ad-layout-key="-hx-v-z-56+l6" data-ad-client="ca-pub-3242762948116825"
+                                data-ad-slot="7937927161"></ins>
+                            <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                            </script>
                         </ul>
                     </div>
                 </div>
@@ -193,6 +214,16 @@
                                 <div class="col-lg-6 col-md-6">
                                     <div class="utf_list_post_block">
                                         <ul class="utf_list_post">
+                                            <script async
+                                                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+                                            </script>
+                                            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                                                data-ad-layout-key="-hx-v-z-56+l6"
+                                                data-ad-client="ca-pub-3242762948116825"
+                                                data-ad-slot="7937927161"></ins>
+                                            <script>
+                                                (adsbygoogle = window.adsbygoogle || []).push({});
+                                            </script>
                                             {% else %}
                                             <li class="clearfix">
                                                 <div class="utf_post_block_style post-float clearfix">
@@ -438,7 +469,8 @@
                     {% if forloop.first %}
                     <div class="utf_post_overaly_style clearfix">
                         <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img class="img-fluid"
-                                    src="{{ post.thumbnail.url }}" alt="{{ post.title }}" style="object-fit: cover;height: 200px;"> </a> </div>
+                                    src="{{ post.thumbnail.url }}" alt="{{ post.title }}"
+                                    style="object-fit: cover;height: 200px;"> </a> </div>
                         <div class="utf_post_content">
                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}"
                                     title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
@@ -486,7 +518,8 @@
                     {% if forloop.first %}
                     <div class="utf_post_overaly_style clearfix">
                         <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img class="img-fluid"
-                                    src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 200px;" alt="{{ post.title }}"> </a> </div>
+                                    src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 200px;"
+                                    alt="{{ post.title }}"> </a> </div>
                         <div class="utf_post_content">
                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}"
                                     title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
@@ -534,7 +567,8 @@
                     {% if forloop.first %}
                     <div class="utf_post_overaly_style clearfix">
                         <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img class="img-fluid"
-                                    src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 200px;" alt="{{ post.title }}"> </a> </div>
+                                    src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 200px;"
+                                    alt="{{ post.title }}"> </a> </div>
                         <div class="utf_post_content">
                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}"
                                     title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
