--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,13 @@
             {% if forloop.counter == 4 %}
         </div>
         <div class="gap-40"></div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- home_responsive_ad -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3242762948116825"
+            data-ad-slot="9578311895" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <div class="row">
             {% endif %}
             {% endfor %}
