--- a/templates/index.html
+++ b/templates/index.html
@@ -36,9 +36,7 @@
         <!-- home_responsive_ad -->
         <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3242762948116825"
             data-ad-slot="9578311895" data-ad-format="auto" data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        
         <div class="row">
             {% endif %}
             {% endfor %}
@@ -61,16 +59,17 @@
                                 <div class="col-lg-6 col-md-6">
                                     <div class="utf_list_post_block">
                                         <ul class="utf_list_post">
-                                            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
-                                                data-ad-layout-key="-hx-v-z-56+l6"
-                                                data-ad-client="ca-pub-3242762948116825"
-                                                data-ad-slot="7937927161"></ins>
-                                            <script>
-                                                (adsbygoogle = window.adsbygoogle || []).push({});
-                                            </script>
+                                            
 
 
                                             {% for post in amakurumashya|slice:":6" %}
+
+                                                {% if forloop.counter|divisibleby:3  %}
+                                                    <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                                                    data-ad-layout-key="-hx-v-z-56+l6"
+                                                    data-ad-client="ca-pub-3242762948116825"
+                                                    data-ad-slot="7937927161"></ins>
+                                                {% endif %}
                                             <li class="clearfix">
                                                 <div class="utf_post_block_style post-float clearfix">
                                                     <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
@@ -152,9 +151,7 @@
                             <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
                                 data-ad-layout-key="-hx-v-z-56+l6" data-ad-client="ca-pub-3242762948116825"
                                 data-ad-slot="7937927161"></ins>
-                            <script>
-                                (adsbygoogle = window.adsbygoogle || []).push({});
-                            </script>
+                            
                         </ul>
                     </div>
                 </div>
@@ -215,15 +212,9 @@
                                 <div class="col-lg-6 col-md-6">
                                     <div class="utf_list_post_block">
                                         <ul class="utf_list_post">
-                                            
-                                            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
-                                                data-ad-layout-key="-hx-v-z-56+l6"
-                                                data-ad-client="ca-pub-3242762948116825"
-                                                data-ad-slot="7937927161"></ins>
-                                            <script>
-                                                (adsbygoogle = window.adsbygoogle || []).push({});
-                                            </script>
                                             {% else %}
+
+
                                             <li class="clearfix">
                                                 <div class="utf_post_block_style post-float clearfix">
                                                     <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
