--- a/templates/layout.html
+++ b/templates/layout.html
@@ -64,6 +64,7 @@
         {% include "inc/footer.html" %}
         <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/aes.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script>
