--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -41,6 +41,9 @@
                             class="img-fluid" alt="SmartAgri"></a>
                 </div>
             </div>
+            <!-- Ezoic - first_ads_top - native_top -->
+            <div id="ezoic-pub-ad-placeholder-102"> </div>
+            <!-- End Ezoic - first_ads_top - native_top -->
         </div>
     </div>
 </header>
@@ -78,8 +81,7 @@
             </nav>
             <div class="utf_nav_search"> <span id="search"><i class="fa fa-search"></i></span> </div>
             <div class="utf_search_block" style="display: none;">
-                <script async src="https://cse.google.com/cse.js?cx=partner-pub-3242762948116825:bk80lqgxitc"></script>
-                <div class="gcse-search"></div>
+                <input type="text" name="search" class="form-control">
                 <span class="utf_search_close">×</span>
             </div>
         </div>
