--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -47,12 +47,6 @@
 
 <section class="utf_block_wrapper">
 
-  <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid"
-    data-ad-client="ca-pub-3242762948116825" data-ad-slot="1510628928"></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-
 
   <div class="container">
     <div class="row">
@@ -75,15 +69,22 @@
           </div>
 
           <div class="utf_post_content-area">
-            <div class="sharethis-inline-share-buttons"></div>
             <div class="entry-content">
-              {{ post.body|safe }}
-
+              
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                    style="display:block; text-align:center;"
+                    data-ad-layout="in-article"
+                    data-ad-format="fluid"
+                    data-ad-client="ca-pub-3242762948116825"
+                    data-ad-slot="1510628928"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
               <!-- Go to www.addthis.com/dashboard to customize your tools -->
               <div class="addthis_inline_share_toolbox_hjqg"></div>
 
             </div>
-            <div class="sharethis-inline-share-buttons"></div>
             <div class="tags-area clearfix">
               <div class="post-tags">
                 <span>Tags:</span>
@@ -92,8 +93,6 @@
                 {% endfor %}
               </div>
             </div>
-
-            <div class="sharethis-inline-reaction-buttons"></div>
           </div>
         </div>
 
@@ -188,10 +187,6 @@
                 width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                 allowTransparency="true" allow="encrypted-media"></iframe>
             </div>
-
-            <script type='text/javascript'
-              src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=inline-reaction-buttons&cms=sop'
-              async='async'></script>
 
           </div>
 
