--- a/templates/index.html
+++ b/templates/index.html
@@ -32,12 +32,7 @@
             </div>
             {% if forloop.counter == 4 %}
         </div>
-        <div class="gap-40">
-            <!-- home_responsive_ad -->
-        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3242762948116825"
-        data-ad-slot="9578311895" data-ad-format="auto" data-full-width-responsive="true"></ins>
-        </div>
-        
+        <div class="gap-40"></div>
         <div class="row">
             {% endif %}
 
@@ -62,10 +57,8 @@
                                 <div class="col-lg-6 col-md-6">
                                     <div class="utf_list_post_block">
                                         <ul class="utf_list_post">
-                                            
-
-
-                                            {% for post in amakurumashya|slice:":6" %}
+                                        
+                                            {% for post in amakurumashya|slice:":8" %}
 
                                             <li class="clearfix">
                                                 <div class="utf_post_block_style post-float clearfix">
