--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -52,10 +52,10 @@
     <div class="row">
       <div class="col-lg-8 col-md-12">
         <div class="single-post">
-          <div class="post-media post-featured-image"> <img src="{{ post.thumbnail.url }}" class="img-fluid" alt="">
+          <div class="post-media post-featured-image"> <img src="{{ post.thumbnail.url }}" style="object-fit: cover;max-height: 300px;" class="img-fluid" alt="{{ post.title }}">
           </div>
           <div class="utf_post_title-area"> <a class="utf_post_cat" href="#">{{ post.category.name }}</a>
-            <h1 class="utf_post_title">{{ post.title|title }}</h1>
+            <h1 class="utf_post_title">{{ post.title }}</h1>
             <div class="utf_post_meta"> <span class="utf_post_author"> By <a
                   href="#">{{ post.author.username|title }}</a> </span> <span class="utf_post_date"><i
                   class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span> <span class="post-hits"><i
