--- a/templates/index.html
+++ b/templates/index.html
@@ -164,10 +164,9 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-lg-6">
                 <div class="block color-dark-blue">
-                    <h3 class="utf_block_title"><span>Ikoranabuhanga</span></h3>
+                    <h3 class="utf_block_title"><span>Imyindagaduro</span></h3>
                     <div class="utf_list_post_block">
                         <ul class="utf_list_post">
                             {% for post in enterntainment|slice:":5" %}
@@ -179,7 +178,10 @@
                                         </a> </div>
                                     <div class="utf_post_content">
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
-                                                title="{{ post.title }}">{{ post.title|slice:":50" }}...</a> </h2>
+                                                title="{{ post.title }}">{{ post.title|slice:":70" }}...</a> </h2>
+                                        <p>
+                                            {{ post.body|striptags|slice:':200' }}...
+                                        </p>
                                         <div class="utf_post_meta"> <span class="utf_post_author"><i
                                                     class="fa fa-user"></i>
                                                 <a href="#">{{ post.author.username }}</a></span> <span
