--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
                                                 title="{{ post.title }}">{{ post.title|slice:":50" }}...</a> </h2>
                                         
-                                            {{ post.body|safe|striptags|slice:':100' }}...
+                                            {{ post.body|striptags|slice:':100' }}...
                                         
                                         <div class="utf_post_meta"> <span class="utf_post_author"><i
                                                     class="fa fa-user"></i>
@@ -196,6 +196,10 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-lg-12">
+                <br>
             </div>
         </div>
     </div>
