--- a/templates/index.html
+++ b/templates/index.html
@@ -151,11 +151,7 @@
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
                                                 title="{{ post.title }}">{{ post.title|slice:":50" }}...</a> </h2>
                                                 {{ post.body|striptags|safe|slice:':110' }}...
-                                        <div class="utf_post_meta"> <span class="utf_post_author"><i
-                                                    class="fa fa-user"></i>
-                                                <a href="#">{{ post.author.username }}</a></span> <span
-                                                class="utf_post_date"><i
-                                                    class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span></div>
+                                        </div>
                                     </div>
                                 </div>
                             </li>
@@ -183,11 +179,7 @@
                                         
                                         <div class="utf_post_meta">
                                             {{ post.body|striptags|safe|slice:':110' }}...
-                                             <span class="utf_post_author"><i
-                                                    class="fa fa-user"></i>
-                                                <a href="#">{{ post.author.username }}</a></span> <span
-                                                class="utf_post_date"><i
-                                                    class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span></div>
+                                        </div>
                                     </div>
                                 </div>
                             </li>
