--- a/templates/index.html
+++ b/templates/index.html
@@ -151,9 +151,11 @@
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
                                                 title="{{ post.title }}">{{ post.title|slice:":50" }}...</a> </h2>
 
-                                                <div class="utf_post_meta">
-                                                {{ post.body|striptags|safe|slice:':110' }}...
+                                        {% if not request|is_mobile %}
+                                        <div class="utf_post_meta">
+                                            {{ post.body|striptags|safe|slice:':110' }}...
                                         </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </li>
@@ -178,10 +180,12 @@
                                     <div class="utf_post_content">
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
                                                 title="{{ post.title }}">{{ post.title|slice:":50" }}...</a> </h2>
-                                        
+
+                                        {% if not request|is_mobile %}
                                         <div class="utf_post_meta">
                                             {{ post.body|striptags|safe|slice:':110' }}...
                                         </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </li>
@@ -192,7 +196,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="col-lg-12">
                 <br>
             </div>
