--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
             <div class="sidebar utf_sidebar_right">
 
                 <div class="widget color-default">
-                    <h3 class="utf_block_title"><span>Inkuru Zikunzwe</span></h3>
+                    <h3 class="utf_block_title"><span>Inkuru zikunzwe</span></h3>
                     <div class="utf_list_post_block">
                         <ul class="utf_list_post">
                             {% for post in popular_news %}
