--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
                             <li class="clearfix">
                                 <div class="utf_post_block_style post-float clearfix">
                                     <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                                src="{{ post.thumbnail.url }}" alt=""> </a></div>
+                                                src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 90px;" alt="{{ post.title }}"> </a></div>
                                     <div class="utf_post_content">
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
                                                 title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
@@ -145,7 +145,7 @@
                             <li class="clearfix">
                                 <div class="utf_post_block_style post-float clearfix">
                                     <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img
-                                                class="img-fluid" src="{{ post.thumbnail.url }}" alt="{{ post.title }}">
+                                                class="img-fluid" src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 90px;" alt="{{ post.title }}" alt="{{ post.title }}">
                                         </a> </div>
                                     <div class="utf_post_content">
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
@@ -175,7 +175,7 @@
                             <li>
                                 <div class="utf_post_block_style post-float clearfix">
                                     <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img
-                                                class="img-fluid" src="{{ post.thumbnail.url }}" alt="{{ post.title }}">
+                                                class="img-fluid" src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 90px;" alt="{{ post.title }}" alt="{{ post.title }}">
                                         </a> </div>
                                     <div class="utf_post_content">
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
